Hero image and card tweaks. Resolves #27

--- a/static/src/pages/index.html
+++ b/static/src/pages/index.html
@@ -16,40 +16,28 @@
         <div class="large-3 medium-6 columns">
             <div class="image card">
                 <h2 class="title">Working Dogs &amp; Horses</h2>
-                <a href="#"><img
-                        src="http://placehold.it/300x400">
-                    <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-                </a>
+                <a href="#"><img src="http://www.fillmurray.com/300/400"></a>
             </div>
         </div>
 
         <div class="large-3 medium-6 columns">
             <div class="image card">
                 <h2 class="title">Ultimate Rural Training Centre</h2>
-                <a href="ultimate-rural-training-centre.html"><img
-                        src="http://placehold.it/300x400">
-                    <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-                </a>
+                <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
             </div>
         </div>
 
         <div class="large-3 medium-6 columns">
             <div class="image card">
                 <h2 class="title">(TEMT) Toomby Equine Muscular Therapy</h2>
-                <a href="#"><img
-                        src="http://placehold.it/300x400">
-                    <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-                </a>
+                <a href="#"><img src="http://www.fillmurray.com/300/400"> </a>
             </div>
         </div>
 
         <div class="large-3 medium-6 columns">
             <div class="image card">
                 <h2 class="title">EMM-TECH</h2>
-                <a href="#"><img
-                        src="http://placehold.it/300x400">
-                    <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-                </a>
+                <a href="#"><img src="http://www.fillmurray.com/300/400"> </a>
             </div>
         </div>
 
