--- a/static/src/pages/news.html
+++ b/static/src/pages/news.html
@@ -107,9 +107,11 @@
 
     <section class="pagination">
         <div class="row">
-            <p>
-                TODO: Pagination
-            </p>
+          <a href="#"><span>1</span></a>
+          <a href="#"><span>2</span></a>
+          <a href="#"><span>3</span></a>
+          <a href="#"><span>4</span></a>
+          <a href="#"><span>Next</span></a>
         </div>
     </section>
 
