--- a/static/src/pages/news.html
+++ b/static/src/pages/news.html
@@ -4,115 +4,10 @@
 
     <section class="articles">
         <div class="row">
-            <div class="large-6 medium-12 columns primary">
-                <img src="http://placehold.it/300x300" />
-                <h1>Firm Takes Skills Rein</h1>
-                <p>
-                  Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmark-sgrove right at the coast of the Semantics, a large language ocean.
-                </p>
-                <p class="read-more">
-                  <a href="#">Read More ></a>
-                </p>
-            </div>
-
-            <div class="large-3 medium-6 columns article">
-              <img src="http://placehold.it/250x150" />
-              <p class="date">
-                11 Apr 2017
-              </p>
-              <h1>The Working Dog...</h1>
-              <p>
-                Far far away, behind the word mountains, far from the countries...
-              </p>
-            </div>
-
-            <div class="large-3 medium-6 columns article">
-              <img src="http://placehold.it/250x150" />
-              <p class="date">
-                11 Apr 2017
-              </p>
-              <h1>The Working Dog...</h1>
-              <p>
-                Far far away, behind the word mountains, far from the countries...
-              </p>
-            </div>
-
-            <div class="large-3 medium-6 columns article">
-              <img src="http://placehold.it/250x150" />
-              <p class="date">
-                11 Apr 2017
-              </p>
-              <h1>The Working Dog...</h1>
-              <p>
-                Far far away, behind the word mountains, far from the countries...
-              </p>
-            </div>
-
-            <div class="large-3 medium-6 columns article">
-              <img src="http://placehold.it/250x150" />
-              <p class="date">
-                11 Apr 2017
-              </p>
-              <h1>The Working Dog...</h1>
-              <p>
-                Far far away, behind the word mountains, far from the countries...
-              </p>
-            </div>
-
-            <div class="large-3 medium-6 columns article">
-              <img src="http://placehold.it/250x150" />
-              <p class="date">
-                11 Apr 2017
-              </p>
-              <h1>The Working Dog...</h1>
-              <p>
-                Far far away, behind the word mountains, far from the countries...
-              </p>
-            </div>
-
-            <div class="large-3 medium-6 columns article">
-              <img src="http://placehold.it/250x150" />
-              <p class="date">
-                11 Apr 2017
-              </p>
-              <h1>The Working Dog...</h1>
-              <p>
-                Far far away, behind the word mountains, far from the countries...
-              </p>
-            </div>
-
-            <div class="large-3 medium-6 columns article">
-              <img src="http://placehold.it/250x150" />
-              <p class="date">
-                11 Apr 2017
-              </p>
-              <h1>The Working Dog...</h1>
-              <p>
-                Far far away, behind the word mountains, far from the countries...
-              </p>
-            </div>
-
-            <div class="large-3 medium-6 columns article">
-              <img src="http://placehold.it/250x150" />
-              <p class="date">
-                11 Apr 2017
-              </p>
-              <h1>The Working Dog...</h1>
-              <p>
-                Far far away, behind the word mountains, far from the countries...
-              </p>
-            </div>
+            {{> articles}}
         </div>
     </section>
 
-    <section class="pagination">
-        <div class="row">
-          <a href="#"><span>1</span></a>
-          <a href="#"><span>2</span></a>
-          <a href="#"><span>3</span></a>
-          <a href="#"><span>4</span></a>
-          <a href="#"><span>Next</span></a>
-        </div>
-    </section>
+    {{> pagination}}
 
 </section>
