Clean up navigation colours

--- a/static/src/pages/index.html
+++ b/static/src/pages/index.html
@@ -1,6 +1,7 @@
-<div class="hero">
+<div class="home hero">
     <div class="row">
         <div class="medium-8 medium-centered column">
+            <img src="assets/img/logo-main.png">
             <h1>Welcome to Wonderland Station</h1>
             <p>Etiam nec risus nec massa ornare dapibus. Vivamus id cursus odio, at porta est. Sed a est justo.
                 Pellentesque efficitur mollis lorem non semper. Nam lacinia ante nunc, vel mattis odio lobortis et.
