--- a/static/src/pages/index.html
+++ b/static/src/pages/index.html
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="latest-news section" data-equalizer data-equalize-on="medium">
+<section class="latest-news section box" data-equalizer data-equalize-on="medium">
     <div class="row">
         <h2>Latest News</h2>
 
@@ -91,7 +91,7 @@
 </section>
 
 
-<section class="latest-news section" data-equalizer data-equalize-on="medium">
+<section class="latest-news" data-equalizer data-equalize-on="medium">
     <div class="row">
         <h2>Latest News With Images</h2>
 
