contact page and removed mistakes

--- a/static/src/pages/contact.html
+++ b/static/src/pages/contact.html
@@ -27,12 +27,16 @@
 				<dd>gandvtoomby@bigpond.com</dd>
 				<dt>Postal Address:</dt>
 				<dd>PO Box 7</dd>
+				<dt></dt>
 				<dd>Thuringowa Central QLD 4817</dd>
 				<dt>Phone Numbers</dt>
-				<dd>Office: 07 4788 8222</dd>
-				<dd>Geoff: 0427 637 465</dd>
-				<dd>Vicki: 0438 637 465</dd>
-				<dd>Juliane: 0407 613 753</dd>
+				<dd><strong>Office:<br></strong> 07 4788 8222</dd>
+				<dt></dt>
+				<dd><strong>Geoff:<br></strong> 0427 637 465</dd>
+				<dt></dt>
+				<dd><strong>Vicki:<br></strong> 0438 637 465</dd>
+				<dt></dt>
+				<dd><strong>Juliane:<br></strong> 0407 613 753</dd>
 			</dl>
 		</div>
 	</div>
