--- a/static/src/pages/contact.html
+++ b/static/src/pages/contact.html
@@ -4,15 +4,21 @@
             <h3>Contact Us</h3>
             <form action="#">
                 <label for="name">Name:</label>
-                <input type="text" name="name">
+                <input type="text" name="name" required>
                 <label for="name">Phone:</label>
-                <input type="text" name="phone">
+                <input type="text" name="phone" required>
                 <label for="name">Email:</label>
-                <input type="text" name="email">
+                <input type="text" name="email" required>
                 <label for="name">City/Town:</label>
                 <input type="text" name="city">
                 <label for="message">Message:</label>
                 <textarea name="mesage"></textarea>
+                <div class="mail">
+                <label for="subscribe">Mail List:</label>
+                <input type="checkbox" name="subscribe"><br>	
+                <input type="submit" name="submit" class="expanded button">
+                </div>
+
             </form>
         </div>
         <div class="medium-6 columns">
@@ -21,13 +27,9 @@
                 <dt>Email:</dt>
                 <dd>gandvtoomby@bigpond.com</dd>
                 <dt>Postal Address:</dt>
-                <dd></dd>
-                <dt></dt>
                 <dd>PO Box 7<br>Thuringowa Central QLD 4817</dd>
 
                 <dt>Phone Numbers</dt>
-                <dd></dd>
-                <dt></dt>
                 <dd><strong>Office:<br></strong> 07 4788 8222</dd>
                 <dt></dt>
                 <dd><strong>Geoff:<br></strong> 0427 637 465</dd>
