removed > after the read mores

--- a/static/src/pages/article.html
+++ b/static/src/pages/article.html
@@ -37,7 +37,7 @@
                 <span class="date">11 April 2017</span>
                 <h3>You Wont Believe this thing!</h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-                <a href="#">Read more ></a>
+                <a href="#">Read more</a>
             </div>
         </div>
         <div class="medium-4 columns card" data-equalizer-watch>
@@ -45,7 +45,7 @@
                 <span class="date">11 April 2017</span>
                 <h3>You Wont Believe this thing!</h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-                <a href="#">Read more ></a>
+                <a href="#">Read more</a>
             </div>
         </div>
         <div class="medium-4 columns card" data-equalizer-watch>
@@ -53,7 +53,7 @@
                 <span class="date">11 April 2017</span>
                 <h3>You Wont Believe this thing!</h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-                <a href="#">Read more ></a>
+                <a href="#">Read more</a>
             </div>
         </div>
     </div>
