--- a/static/src/pages/contact.html
+++ b/static/src/pages/contact.html
@@ -1,6 +1,6 @@
 <section class="contact-form">
     <div class="row">
-        <div class="medium-6 columns contact-box">
+        <div class="large-6 columns contact-box">
             <h3>Contact Us</h3>
             <form action="#">
                 <label for="name">Name:</label>
@@ -21,7 +21,7 @@
 
             </form>
         </div>
-        <div class="medium-6 columns">
+        <div class="large-6 columns">
             <h3>Details</h3>
             <dl class="contact-list">
                 <dt>Email:</dt>
