cleaned up code

--- a/static/src/pages/contact.html
+++ b/static/src/pages/contact.html
@@ -14,11 +14,11 @@
                 <label for="message">Message:</label>
                 <textarea name="mesage"></textarea>
                 <div class="mail">
-                <label for="subscribe">Mail List:</label>
-                <input type="checkbox" name="subscribe"><br>	
-                <input type="submit" name="submit" class="expanded button">
+                    <label for="subscribe">Mail List:</label>
+                    <input type="checkbox" name="subscribe">
+                    <br>
+                    <input type="submit" name="submit" class="expanded button">
                 </div>
-
             </form>
         </div>
         <div class="large-6 columns">
@@ -27,8 +27,8 @@
                 <dt>Email:</dt>
                 <dd>gandvtoomby@bigpond.com</dd>
                 <dt>Postal Address:</dt>
-                <dd>PO Box 7<br>Thuringowa Central QLD 4817</dd>
-
+                <dd>PO Box 7
+                    <br>Thuringowa Central QLD 4817</dd>
                 <dt>Phone Numbers</dt>
                 <dd><strong>Office:<br></strong> 07 4788 8222</dd>
                 <dt></dt>
@@ -43,7 +43,7 @@
 </section>
 <section class="map-section">
     <div class="row map-row">
-    	<h3>Where to find us</h3>
+        <h3>Where to find us</h3>
         <div class="column map">
             <iframe class="map" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=-19.314947%2C%20146.591479&key=AIzaSyAAFdy6HjA3FwsSAniy2Znro161tBK2t2M&maptype=satellite" allowfullscreen></iframe>
         </div>
