Started on items, adding a price to image card

--- a/static/src/pages/shop.html
+++ b/static/src/pages/shop.html
@@ -21,3 +21,17 @@
         </li>
     </ul>
 </section>
+
+<section class="shop-items">
+  <div class="row">
+    <div class="large-3 medium-6 columns">
+        <div class="image card">
+            <h2 class="title">Item One</h2>
+            <p class="price">
+              $499
+            </p>
+            <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
+        </div>
+    </div>
+  </div>
+</section>
