Refactored price t be generic subtext on image card

--- a/static/src/pages/shop.html
+++ b/static/src/pages/shop.html
@@ -27,7 +27,7 @@
     <div class="large-3 medium-6 columns">
         <div class="image card">
             <h2 class="title">Item One</h2>
-            <p class="price">
+            <p class="subtext">
               $499
             </p>
             <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
