fixed unneeded css and added scss variables. Added call to action for the mail list and fixed the dd tags

--- a/static/src/pages/contact.html
+++ b/static/src/pages/contact.html
@@ -1,3 +1,21 @@
+<section class="sub-form section box">
+    <div class="row medium-4">
+        <h3>Subscribe to our mailing list</h3>
+        <p>Keep up to date with our services and products.</p>
+        <div class="input-group">
+            <span class="input-group-label">Email</span>
+            <input class="input-group-field" type="text">
+            <div class="input-group-button">
+                <input type="submit" class="button" value="Submit">
+            </div>
+        </div>
+        <form action="#">
+        
+            
+        </form>
+    </div>
+</section>
+
 <section class="contact-form">
     <div class="row">
         <div class="large-6 columns contact-box">
@@ -13,12 +31,7 @@
                 <input type="text" name="city">
                 <label for="message">Message:</label>
                 <textarea name="mesage"></textarea>
-                <div class="mail">
-                    <label for="subscribe">Mail List:</label>
-                    <input type="checkbox" name="subscribe">
-                    <br>
-                    <input type="submit" name="submit" class="expanded button">
-                </div>
+                <input type="submit" name="submit" class="expanded button">
             </form>
         </div>
         <div class="large-6 columns">
@@ -30,13 +43,10 @@
                 <dd>PO Box 7
                     <br>Thuringowa Central QLD 4817</dd>
                 <dt>Phone Numbers</dt>
-                <dd><strong>Office:<br></strong> 07 4788 8222</dd>
-                <dt></dt>
-                <dd><strong>Geoff:<br></strong> 0427 637 465</dd>
-                <dt></dt>
-                <dd><strong>Vicki:<br></strong> 0438 637 465</dd>
-                <dt></dt>
-                <dd><strong>Juliane:<br></strong> 0407 613 753</dd>
+                <dd><strong>Office:</strong> 07 4788 8222<br>
+                <strong>Geoff:</strong> 0427 637 465<br>
+                <strong>Vicki:</strong> 0438 637 465<br>
+                <strong>Juliane:</strong> 0407 613 753</dd>
             </dl>
         </div>
     </div>
