--- a/static/src/pages/shop.html
+++ b/static/src/pages/shop.html
@@ -24,14 +24,89 @@
 
 <section class="shop-items">
   <div class="row">
+
     <div class="large-3 medium-6 columns">
         <div class="image card">
             <h2 class="title">Item One</h2>
+            <p class="short-description">
+              Lorem ipsum, dolor sit amet.
+            </p>
+            <p class="price">
+              $499
+            </p>
+            <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
+        </div>
+    </div>
+
+    <div class="large-3 medium-6 columns">
+        <div class="image card">
+            <h2 class="title">Item Two</h2>
             <p class="subtext">
               $499
             </p>
             <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
         </div>
     </div>
+
+    <div class="large-3 medium-6 columns">
+        <div class="image card">
+            <h2 class="title">Item Three</h2>
+            <p class="subtext">
+              $499
+            </p>
+            <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
+        </div>
+    </div>
+
+    <div class="large-3 medium-6 columns">
+        <div class="image card">
+            <h2 class="title">Item Four</h2>
+            <p class="subtext">
+              $499
+            </p>
+            <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
+        </div>
+    </div>
+
+    <div class="large-3 medium-6 columns">
+        <div class="image card">
+            <h2 class="title">Item Five</h2>
+            <p class="subtext">
+              $499
+            </p>
+            <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
+        </div>
+    </div>
+
+    <div class="large-3 medium-6 columns">
+        <div class="image card">
+            <h2 class="title">Item Six</h2>
+            <p class="subtext">
+              $499
+            </p>
+            <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
+        </div>
+    </div>
+
+    <div class="large-3 medium-6 columns">
+        <div class="image card">
+            <h2 class="title">Item Seven</h2>
+            <p class="subtext">
+              $499
+            </p>
+            <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
+        </div>
+    </div>
+
+    <div class="large-3 medium-6 columns">
+        <div class="image card">
+            <h2 class="title">Item Eight</h2>
+            <p class="subtext">
+              $499
+            </p>
+            <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
+        </div>
+    </div>
+
   </div>
 </section>
