Setup a custom event card

--- a/static/src/pages/shop.html
+++ b/static/src/pages/shop.html
@@ -22,7 +22,7 @@
     </ul>
 </section>
 
-<section class="shop-items">
+<section class="shop-items" data-equalizer data-equalize-on="medium">
   <div class="row">
     {{> products}}
   </div>
