--- a/static/src/pages/contact.html
+++ b/static/src/pages/contact.html
@@ -10,12 +10,9 @@
             </div>
         </div>
         <form action="#">
-        
-            
         </form>
     </div>
 </section>
-
 <section class="contact-form">
     <div class="row">
         <div class="large-6 columns contact-box">
@@ -43,10 +40,13 @@
                 <dd>PO Box 7
                     <br>Thuringowa Central QLD 4817</dd>
                 <dt>Phone Numbers</dt>
-                <dd><strong>Office:</strong> 07 4788 8222<br>
-                <strong>Geoff:</strong> 0427 637 465<br>
-                <strong>Vicki:</strong> 0438 637 465<br>
-                <strong>Juliane:</strong> 0407 613 753</dd>
+                <dd><strong>Office:</strong> 07 4788 8222
+                    <br>
+                    <strong>Geoff:</strong> 0427 637 465
+                    <br>
+                    <strong>Vicki:</strong> 0438 637 465
+                    <br>
+                    <strong>Juliane:</strong> 0407 613 753</dd>
             </dl>
         </div>
     </div>
@@ -54,8 +54,35 @@
 <section class="map-section">
     <div class="row map-row">
         <h3>Where to find us</h3>
-        <div class="column map">
-            <iframe class="map" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=-19.314947%2C%20146.591479&key=AIzaSyAAFdy6HjA3FwsSAniy2Znro161tBK2t2M&maptype=satellite" allowfullscreen></iframe>
+        <div class="column map" id="map">
         </div>
+        <script>
+        function initMap() {
+            var toomby = {
+                lat: -19.3149947,
+                lng: 146.591479
+            };
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 12,
+                center: toomby,
+                mapTypeId: 'hybrid',
+            });
+            var marker = new google.maps.Marker({
+                position: toomby,
+                map: map,
+
+            });
+            var infowindow = new google.maps.InfoWindow({
+                content: "<h4>Wonderland Station</h4><p>1486 Hervey Range Road<br> Alice River QLD 4818</p>",
+                position: toomby,
+                map: map
+            });
+
+            marker.addListener('click', function() {
+                infowindow.open(map, marker);
+            });
+        }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAFdy6HjA3FwsSAniy2Znro161tBK2t2M&callback=initMap" async defer></script>
     </div>
 </section>
