made email mailto link and disable scrollwheel scroll for the map

--- a/static/src/pages/contact.html
+++ b/static/src/pages/contact.html
@@ -1,5 +1,5 @@
 <section class="sub-form section box">
-    <div class="row medium-4">
+    <div class="row large-4">
         <h3>Subscribe to our mailing list</h3>
         <p>Keep up to date with our services and products.</p>
         <div class="input-group">
@@ -35,17 +35,13 @@
             <h3>Details</h3>
             <dl class="contact-list">
                 <dt>Email:</dt>
-                <dd>gandvtoomby@bigpond.com</dd>
+                <dd><a href="mailto:gandvtoomby@bigpond.com?Subject=Site20%Enquiry">gandvtoomby@bigpond.com</a></dd>
                 <dt>Postal Address:</dt>
-                <dd>PO Box 7
-                    <br>Thuringowa Central QLD 4817</dd>
-                <dt>Phone Numbers</dt>
-                <dd><strong>Office:</strong> 07 4788 8222
-                    <br>
-                    <strong>Geoff:</strong> 0427 637 465
-                    <br>
-                    <strong>Vicki:</strong> 0438 637 465
-                    <br>
+                <dd>PO Box 7<br>Thuringowa Central QLD 4817</dd>
+                <dt>Phone Numbers:</dt>
+                <dd><strong>Office:</strong> 07 4788 8222<br>
+                    <strong>Geoff:</strong> 0427 637 465<br>
+                    <strong>Vicki:</strong> 0438 637 465<br>
                     <strong>Juliane:</strong> 0407 613 753</dd>
             </dl>
         </div>
@@ -66,6 +62,7 @@
                 zoom: 12,
                 center: toomby,
                 mapTypeId: 'hybrid',
+                scrollwheel: false
             });
             var marker = new google.maps.Marker({
                 position: toomby,
