--- a/static/src/pages/item.html
+++ b/static/src/pages/item.html
@@ -24,10 +24,13 @@
     <a href="#" class="button large add-to-cart">Add to Cart</a>
   </div>
 
-  <div class="large-6 columns">
-    <p>
-      TODO: Image gallery
-    </p>
+  <div class="large-6 columns gallery">
+    <img class="row primary" src="http://placehold.it/400x400" alt="Product Image" />
+    <div class="row columns thumbnails">
+      <img class="large-2" src="http://placehold.it/50x50" alt="Product Thumbnail" />
+      <img class="large-2" src="http://placehold.it/50x50" alt="Product Thumbnail" />
+      <img class="large-2" src="http://placehold.it/50x50" alt="Product Thumbnail" />
+    </div>
   </div>
 </section>
 
