--- a/static/src/pages/item.html
+++ b/static/src/pages/item.html
@@ -1,5 +1,5 @@
-<section class="product-basics row">
-  <div class="large-6 columns">
+<section class="product-basics row" data-equalizer data-equalize-on="medium">
+  <div class="large-6 columns" data-equalizer-watch>
     <h1 class="title">`The Rancher` - Ranch Pads</h1>
     <p class="price">
       $399 (Ex. Tax)
@@ -24,12 +24,12 @@
     <a href="#" class="button large add-to-cart">Add to Cart</a>
   </div>
 
-  <div class="large-6 columns gallery">
+  <div class="large-6 columns gallery" data-equalizer-watch>
     <img class="row primary" src="http://placehold.it/400x400" alt="Product Image" />
     <div class="row columns thumbnails">
-      <img class="large-2" src="http://placehold.it/50x50" alt="Product Thumbnail" />
-      <img class="large-2" src="http://placehold.it/50x50" alt="Product Thumbnail" />
-      <img class="large-2" src="http://placehold.it/50x50" alt="Product Thumbnail" />
+      <img class="large-3" src="http://placehold.it/50x50" alt="Product Thumbnail" />
+      <img class="large-3" src="http://placehold.it/50x50" alt="Product Thumbnail" />
+      <img class="large-3" src="http://placehold.it/50x50" alt="Product Thumbnail" />
     </div>
   </div>
 </section>
