--- a/static/src/pages/item.html
+++ b/static/src/pages/item.html
@@ -26,25 +26,16 @@
 
     <div class="large-6 columns product-gallery" data-equalizer-watch>
         <div class="row primary outer-wrapper">
-          <div class="inner-wrapper">
-            <img id="productMain" src="http://placehold.it/400x400" alt="Product Image" />
-          </div>
+            <div class="inner-wrapper">
+                <img id="productImage" src="http://placehold.it/400x400" alt="Product Image" />
+            </div>
         </div>
         <div class="row columns thumbnails">
-            <img class="large-3" src="http://placehold.it/200x200" alt="Product Thumbnail" onclick="changePrimary(this.src)" />
-            <img class="large-3" src="http://placehold.it/300x300" alt="Product Thumbnail" onclick="changePrimary(this.src)" />
-            <img class="large-3" src="http://placehold.it/400x400" alt="Product Thumbnail" onclick="changePrimary(this.src)" />
+            <img class="large-3" src="http://placehold.it/200x200" alt="Product Thumbnail" onclick="updateProductImage(this.src)" />
+            <img class="large-3" src="http://placehold.it/300x300" alt="Product Thumbnail" onclick="updateProductImage(this.src)" />
+            <img class="large-3" src="http://placehold.it/400x400" alt="Product Thumbnail" onclick="updateProductImage(this.src)" />
         </div>
     </div>
-
-    <!-- TODO TEMP -->
-    <script type="text/javascript">
-        function changePrimary(src) {
-            var primary = document.getElementById("productMain");
-            primary.src = src;
-        }
-    </script>
-    <!-- TODO TEMP -->
 
 </section>
 
@@ -86,3 +77,9 @@
     </div>
 
 </section>
+
+<script type="text/javascript">
+    function updateProductImage(src) {
+        document.getElementById("productImage").src = src;
+    }
+</script>
