Media queries to hide gallery when entering table + smaller screens

--- a/static/src/pages/item.html
+++ b/static/src/pages/item.html
@@ -1,4 +1,8 @@
 <section class="product-basics row" data-equalizer data-equalize-on="medium">
+    <div class="row mobile-only">
+        <img src="http://placehold.it/400x400" alt="Product Image" />
+    </div>
+
     <div class="large-6 columns" data-equalizer-watch>
         <h1 class="title">`The Rancher` - Ranch Pads</h1>
         <p class="price">
@@ -24,16 +28,16 @@
         <a href="#" class="button large add-to-cart">Add to Cart</a>
     </div>
 
-    <div class="large-6 columns product-gallery" data-equalizer-watch>
+    <div class="large-6 columns product-gallery no-mobile" data-equalizer-watch>
         <div class="row primary outer-wrapper">
             <div class="inner-wrapper">
                 <img id="productImage" src="http://placehold.it/400x400" alt="Product Image" />
             </div>
         </div>
         <div class="row columns thumbnails">
-            <img class="large-3" src="http://placehold.it/200x200" alt="Product Thumbnail" onclick="updateProductImage(this.src)" />
-            <img class="large-3" src="http://placehold.it/300x300" alt="Product Thumbnail" onclick="updateProductImage(this.src)" />
-            <img class="large-3" src="http://placehold.it/400x400" alt="Product Thumbnail" onclick="updateProductImage(this.src)" />
+            <img class="small-3" src="http://placehold.it/200x200" alt="Product Thumbnail" onclick="updateProductImage(this.src)" />
+            <img class="small-3" src="http://placehold.it/300x300" alt="Product Thumbnail" onclick="updateProductImage(this.src)" />
+            <img class="small-3" src="http://placehold.it/400x400" alt="Product Thumbnail" onclick="updateProductImage(this.src)" />
         </div>
     </div>
 
