Changed the div to a form and deleted the random empty form

--- a/static/src/pages/contact.html
+++ b/static/src/pages/contact.html
@@ -1,5 +1,5 @@
 <section class="sub-form section box">
-    <div class="row medium-4">
+    <form action="#" class="row medium-4">
         <h3>Subscribe to our mailing list</h3>
         <p>Keep up to date with our services and products.</p>
         <div class="input-group">
@@ -9,9 +9,7 @@
                 <input type="submit" class="button" value="Submit">
             </div>
         </div>
-        <form action="#">
-        </form>
-    </div>
+    </form>
 </section>
 <section class="contact-form">
     <div class="row">
