Items now use Foundation classes for showing/hiding images

--- a/static/src/pages/item.html
+++ b/static/src/pages/item.html
@@ -1,5 +1,5 @@
 <section class="product-basics row" data-equalizer data-equalize-on="medium">
-    <div class="row mobile-only">
+    <div class="row show-for-small-only">
         <img src="http://placehold.it/400x400" alt="Product Image" />
     </div>
 
@@ -28,7 +28,7 @@
         <a href="#" class="button large add-to-cart">Add to Cart</a>
     </div>
 
-    <div class="large-6 columns product-gallery no-mobile" data-equalizer-watch>
+    <div class="large-6 columns product-gallery show-for-medium" data-equalizer-watch>
         <div class="row primary outer-wrapper">
             <div class="inner-wrapper">
                 <img id="productImage" src="http://placehold.it/400x400" alt="Product Image" />
