--- a/static/src/pages/ultimate-rural-training-centre.html
+++ b/static/src/pages/ultimate-rural-training-centre.html
@@ -98,6 +98,54 @@
 
     </section>
 
+    <section class="section box">
+        <div class="row">
+            <div class="large-2 medium-4 small-6 column">
+                <div class="card image preview">
+                    <h2 class="course-title">Course 1</h2>
+                    <a href=""><img src="https://placehold.it/300x300"></a>
+                </div>
+            </div>
+            <div class="large-2 medium-4 small-6 column">
+                <div class="card image preview">
+                    <h2 class="course-title">Course 2</h2>
+                    <a href=""><img src="https://placehold.it/300x300"></a>
+                </div>
+            </div>
+            <div class="large-2 medium-4 small-6 column">
+                <div class="card image preview">
+                    <h2 class="course-title">Course 3</h2>
+                    <a href=""><img src="https://placehold.it/300x300"></a>
+                </div>
+            </div>
+            <div class="large-2 medium-4 small-6 column">
+                <div class="card image preview">
+                    <h2 class="course-title">Course 4</h2>
+                    <a href=""><img src="https://placehold.it/300x300"></a>
+                </div>
+            </div>
+
+            <div class="large-2 medium-4 small-6 column">
+                <div class="card image preview">
+                    <h2 class="course-title">Course 5</h2>
+                    <a href=""><img src="https://placehold.it/300x300"></a>
+                </div>
+            </div>
+            <div class="large-2 medium-4 small-6 column">
+                <div class="card image preview">
+                    <h2 class="course-title">Course 6</h2>
+                    <a href=""><img src="https://placehold.it/300x300"></a>
+                </div>
+            </div>
+            <div class="large-2 medium-4 small-6 column">
+                <div class="card image preview">
+                    <h2 class="course-title">Course 7</h2>
+                    <a href=""><img src="https://placehold.it/300x300"></a>
+                </div>
+            </div>        
+        </div>
+    </section>
+
     <section class="faq section">
         <div class="row">
             <div class="columns">
