--- a/a2.html
+++ b/a2.html
@@ -117,7 +117,7 @@
         </ul>
     </li>
 </ul>
-<h2>Login Information</h2>
+<h2>Login Information [Production/Staging]</h2>
 <p>Admin login: User</p>
 <p>Admin password: Lbmwnj3sUCNA</p>
 <h2>Comments</h2>
