--- a/a2.html
+++ b/a2.html
@@ -52,6 +52,15 @@
     <li><a href="https://itatjcu.slack.com/messages/G0PDNKCH3" target="_blank">Slack group</a></li>
 </ul>
 
+<h2>Wordpress Plugins</h2>
+<ul>
+    <li><a href="https://github.com/timber/timber" target="_blank">Timber [Packaged with Theme]</a></li>
+    <li><a href="https://github.com/wp-sync-db/wp-sync-db" target="_blank">WP Sync DB</a></li>
+    <li><a href="https://github.com/wp-sync-db/wp-sync-db-cli" target="_blank">WP Sync DB CLI [Staging Only]</a></li>
+    <li><a href="https://github.com/wp-sync-db/wp-sync-db-media-files" target="_blank">WP Sync DB Media Files</a></li>
+    <li><a href="https://www.advancedcustomfields.com/pro/" target="_blank">Advanced Custom Fields Pro [Installed Locally with Fields exported to Theme]</a></li>
+</ul>
+
 <h2>References (sources of copied resources)</h2>
 <ul>
     <li>
