--- a/a2.html
+++ b/a2.html
@@ -58,7 +58,8 @@
     <li><a href="https://github.com/wp-sync-db/wp-sync-db" target="_blank">WP Sync DB</a></li>
     <li><a href="https://github.com/wp-sync-db/wp-sync-db-cli" target="_blank">WP Sync DB CLI [Staging Only]</a></li>
     <li><a href="https://github.com/wp-sync-db/wp-sync-db-media-files" target="_blank">WP Sync DB Media Files</a></li>
-    <li><a href="https://www.advancedcustomfields.com/pro/" target="_blank">Advanced Custom Fields Pro [Installed Locally with Fields exported to Theme]</a></li>
+    <li><a href="https://www.advancedcustomfields.com/pro/" target="_blank">Advanced Custom Fields Pro [Installed
+        Locally with Fields exported to Theme]</a></li>
 </ul>
 
 <h2>References (sources of copied resources)</h2>
@@ -137,8 +138,13 @@
         including goals
     </li>
     <li>
-        As the website was being developed while we were attempting to redevelop it, it was difficult to correctly time
+        As the website was being modified while we were attempting to redevelop it, it was difficult to correctly time
         tasks as extra content needed to be added in multiple instances resulting in some redesigns
+    </li>
+    <li>
+        The scarcity of existing content (with any real depth or length) forced some design decisions relating to pages
+        and content structure. For example, there is very little content regarding a clinic, so they were grouped under
+        related pages (similar to the current site)
     </li>
 </ul>
 </body>
