Add theme zip file

--- a/a2.html
+++ b/a2.html
@@ -48,8 +48,10 @@
     <li><a href="https://github.com/CP3402-2017-1/a2-cp3402-2017-team24" target="_blank">GitHub Repository</a></li>
     <li><a href="https://github.com/CP3402-2017-1/a2-cp3402-2017-team24/projects/2" target="_blank">GitHub Project
         Board</a></li>
+    <li><a href="https://github.com/CP3402-2017-1/a2-cp3402-2017-team24/releases" target="_blank">Theme Zip File</a></li>
     <li><a href="https://itatjcu.slack.com/messages/G0PDNKCH3" target="_blank">Slack group</a></li>
     <li><a href="https://itatjcu.slack.com/messages/G0PDNKCH3" target="_blank">Slack group</a></li>
+
 </ul>
 
 <h3>Wordpress Plugins</h3>
